--- a/test.html
+++ b/test.html
@@ -119,7 +119,7 @@
 }
 .fa-glass:before{
 	font-family: 'FontAwesome';
-	content:"\fc21"
+	content:"\f009"
 }
 		</style>
 		<!--<link rel="stylesheet" type="text/css" href="public/css/font-awesome.min.css"/>-->
