--- a/template.html
+++ b/template.html
@@ -8,9 +8,9 @@
 		<title> jurnlee&#39;s Blog </title>
 
 		<link rel="stylesheet" type="text/css" href="public/css/reset.css" media="all">
+		<link rel="stylesheet" type="text/css" href="public/css/myicon.css" media="all">
 		<link rel="stylesheet" type="text/css" href="public/css/main.css" media="all">
 		<link rel="stylesheet" type="text/css" href="public/css/github-light.css" media="all">
-		<link rel="stylesheet" type="text/css" href="public/css/font-awesome.min.css">
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lt IE 9]>
@@ -33,9 +33,9 @@
 						</div>
 						<div id="nav-list">
 							<ul>
-								<li class="nav-item"> <a href="#"> Home </a> </li>
+								<li class="nav-item"> <a href="index.html"> Home </a> </li>
 								<li class="nav-item">
-									<a href="#"> Categories <span class="icon fa-angle-down"></span></a>
+									<a href="#"> Categories <span class="icon icon-angle-down"></span></a>
 									<ul>
 										<li> <a href="#"> Developer </a> </li>
 										<li> <a href="#"> CG </a> </li>
@@ -101,22 +101,41 @@
 			<div class="divider ldivider"></div>
 			<div id="footer">
 				<div class="divider ldivider"></div>
-				<div class="divider ldivider"></div>
-				<div class="divider ldivider"></div>
-				<div class="container">
+				<div class="container small-txt">
 					<div class="row">
-						<div class=" 4u">   
-							<a href="https://github.com/jurnlee"  style="color: #ccc!important;">
+						<div class="4u small-txt align-center">
+							<img src="public/img/qrcode_litemaple.jpg" height="130px"/>
+							<br />扫码关注一个人的公众号
+						</div>
+						<div class=" 4u ">   
+							<!--<a href="https://github.com/jurnlee"  style="color: #ccc!important;">
       							<svg height="28" role="img" title="GitHub " version="1.1" viewBox="0 0 16 16" width="28">
       								<path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59 0.4 0.07 0.55-0.17 0.55-0.38 0-0.19-0.01-0.82-0.01-1.49-2.01 0.37-2.53-0.49-2.69-0.94-0.09-0.23-0.48-0.94-0.82-1.13-0.28-0.15-0.68-0.52-0.01-0.53 0.63-0.01 1.08 0.58 1.23 0.82 0.72 1.21 1.87 0.87 2.33 0.66 0.07-0.52 0.28-0.87 0.51-1.07-1.78-0.2-3.64-0.89-3.64-3.95 0-0.87 0.31-1.59 0.82-2.15-0.08-0.2-0.36-1.02 0.08-2.12 0 0 0.67-0.21 2.2 0.82 0.64-0.18 1.32-0.27 2-0.27 0.68 0 1.36 0.09 2 0.27 1.53-1.04 2.2-0.82 2.2-0.82 0.44 1.1 0.16 1.92 0.08 2.12 0.51 0.56 0.82 1.27 0.82 2.15 0 3.07-1.87 3.75-3.65 3.95 0.29 0.25 0.54 0.73 0.54 1.48 0 1.07-0.01 1.93-0.01 2.2 0 0.21 0.15 0.46 0.55 0.38C13.71 14.53 16 11.53 16 8 16 3.58 12.42 0 8 0z">
       								</path>
       							</svg>
-							</a>
+							</a>-->
+							<div class="txt-underline">
+								联系方式
+							</div>
+							<a href="http://github.com/jurnlee" target="_blank"> <span class="icon icon-github"></span> github.jurnlee </a> 
+							<div class="divider xsdivider"></div>
+							<a href="http://weibo.com/jurnlee" target="_blank"> <span class="icon icon-weibo"></span> 微博：筱枫夜 </a> <br />
 						</div>
-						<div class=" 4u"> &copy;jurnlee  </div>
-						<div class=" 4u"> Design reference: n33.co </div>
+						<div class=" 4u$ small-txt "> 
+							<div class="txt-underline">
+								题外话
+							</div>
+							如果你觉得一个人的人格还不赖，做的事情算有点意义和价值，那么欢迎参观我的<a href="http://shop119297104.taobao.com/" target="_blank"> 印像陈列馆 </a> ，我会用一点心意去感谢您的支持！
+						</div>
+						<div class="12u$">
+							<br />
+						</div>
+						<div class="12u$ last small-txt align-center">
+						免责声明：站内资源部分收集于互联网，如有侵犯您的版权，不甚荣幸，请联系本站协商删除或授权操作，谢谢！<br />
+						 &copy;jurnlee &nbsp;&nbsp;&nbsp;&nbsp; Design reference: n33.co
+						</div>
 					</div>
-				</div>
+						</div>
 			</div>
 		</div><!-- end of page-wraper-->
 
