--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ---
-layout: page
+layout: mainpage
 title: 首页
 
 ---
+<!--
 <div class="row">
   {% for post in paginator.posts %}
     <div class="col-md-12">
@@ -32,5 +33,6 @@ title: 首页
   <div class="col-md-12">
     {% include paginator.html %}
   </div>
-</div>
+</div>-->
+<h1>welcome!</h1>
 
