--- a/template.html
+++ b/template.html
@@ -131,7 +131,7 @@
 							<br />
 						</div>
 						<div class="12u$ last small-txt align-center">
-						免责声明：站内资源部分收集于互联网，如有侵犯您的版权，不甚荣幸，请联系本站协商删除或授权操作，谢谢！<br />
+						免责声明：站内资源部分收集于互联网，如有侵犯您的版权，不甚荣幸，请联系本站删除或授权操作，谢谢！<br />
 						 &copy;jurnlee &nbsp;&nbsp;&nbsp;&nbsp; Design reference: n33.co
 						</div>
 					</div>
