update 0302,template to jekyll

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: mainpage
+layout: pageIndex
 title: 首页
 
 ---
@@ -34,5 +34,29 @@ title: 首页
     {% include paginator.html %}
   </div>
 </div>-->
-<h1>welcome!</h1>
+<div class="row">
+					<div class="4u 12u$(xsmall) 6u(medium) ">
+						row
+					</div>
+					<div class="4u 12u$(xsmall) 6u(medium) ">
+						row
+					</div>
+					<div class="4u 12u$(xsmall) 6u(medium) ">
+						row
+					</div>
+					<div class="4u 12u$(xsmall) 6u(medium) ">
+						row
+					</div>
+				</div>
+				<div id="one">
+					<h2>--one--</h2>
+					
+				</div>
+				<div id="two">
+					<h1>--two--</h1>
+				</div>
+				
+				<div id="contact">
+					here is the contact info.
+				</div>
 
