--- a/template.html
+++ b/template.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="public/css/reset.css" media="all">
 		<link rel="stylesheet" type="text/css" href="public/css/myicon.css" media="all">
 		<link rel="stylesheet" type="text/css" href="public/css/main.css" media="all">
-		<link rel="stylesheet" type="text/css" href="public/css/github-light.css" media="all">
+		<link rel="stylesheet" type="text/css" href="public/css/myainimate.css" media="all">
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lt IE 9]>
@@ -21,7 +21,7 @@
 		
 		</style>
 	</head>
-	<body>
+	<body class="page-index">
 		<div id="page-wrapper">
 			<!-- header -->
 			<header id="header" class="ani-flag ">
@@ -53,7 +53,9 @@
 			</header>
 			<!-- banner -->
 			<div id="hd-banner">
-				<div class="hd-bg"></div>
+				<div id="hd-bgs">
+					<!--<div class="hd-bg"></div>-->
+				</div>
 				<div class="hd-txt">
 					<h1>当你不断追求卓越的时候，成功一定会追赶你的脚步</h1>
 					<p>待到成功后再诉说的艰辛过程，一切都将被轻描淡写的多么清晰完美，但永远没有这样一边走一边探索出的东西真切，更具有普遍意义。
