change to static html5 version

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-    <title> 首页 - 久礼斯麦 </title>
+    <title>久礼斯麦 - Jurnlee's mind</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="assets/css/main.css"/>
