--- a/index.html
+++ b/index.html
@@ -55,101 +55,55 @@
         </section>
 
         <!-- Gallery -->
-        <section id="galleries">
-            <div class="gallery">
-            <!--
-
-                <header class="special">
-                    <h2>What's New</h2>
-                </header>
-                <div class="content">
-                    <div class="media">
-                        <a href="images/fulls/01.jpg"><img src="images/thumbs/01.jpg" alt=""
-                                                           title="This right here is a caption."/></a>
-                    </div>
-                    <div class="media">
-                        <a href="images/fulls/05.jpg"><img src="images/thumbs/05.jpg" alt=""
-                                                           title="This right here is a caption."/></a>
-                    </div>
-                    <div class="media">
-                        <a href="images/fulls/09.jpg"><img src="images/thumbs/09.jpg" alt=""
-                                                           title="This right here is a caption."/></a>
-                    </div>
-                    <div class="media">
-                        <a href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg" alt=""
-                                                           title="This right here is a caption."/></a>
-                    </div>
-                    <div class="media">
-                        <a href="images/fulls/06.jpg"><img src="images/thumbs/06.jpg" alt=""
-                                                           title="This right here is a caption."/></a>
-                    </div>
-                    <div class="media">
-                        <a href="images/fulls/10.jpg"><img src="images/thumbs/10.jpg" alt=""
-                                                           title="This right here is a caption."/></a>
-                    </div>
-                    <div class="media">
-                        <a href="images/fulls/03.jpg"><img src="images/thumbs/03.jpg" alt=""
-                                                           title="This right here is a caption."/></a>
-                    </div>
-                    <div class="media">
-                        <a href="images/fulls/07.jpg"><img src="images/thumbs/07.jpg" alt=""
-                                                           title="This right here is a caption."/></a>
-                    </div>
-                </div>
-                <footer>
-                    <a href="gallery.html" class="button big">Full Gallery</a>
-                </footer>-->
+        <section id="latest">
+            <div class="inner">
+                <h1>latest post.</h1>
             </div>
         </section>
 
-        <section id="kong">
-            <h1>这里是测试section</h1>
+        <section id="comment">
+            <div class="inner">
+                <h1>这里是测试section</h1>
+            </div>
         </section>
         <!-- Contact -->
-        <section id="contact">
-            <!-- Social -->
-            <div class="social column">
-                <h3>About Me</h3>
-                <p>Mus sed interdum nunc dictum rutrum scelerisque erat a parturient condimentum potenti dapibus
-                    vestibulum condimentum per tristique porta. Torquent a ut consectetur a vel ullamcorper a commodo a
-                    mattis ipsum class quam sed eros vestibulum quisque a eu nulla scelerisque a elementum
-                    vestibulum.</p>
-                <p>Aliquet dolor ultricies sem rhoncus dolor ullamcorper pharetra dis condimentum ullamcorper rutrum
-                    vehicula id nisi vel aptent orci litora hendrerit penatibus erat ad sit. In a semper velit eleifend
-                    a viverra adipiscing a phasellus urna praesent parturient integer ultrices montes parturient
-                    suscipit posuere quis aenean. Parturient euismod ultricies commodo arcu elementum suspendisse id
-                    dictumst at ut vestibulum conubia quisque a himenaeos dictum proin dis purus integer mollis
-                    parturient eros scelerisque dis libero parturient magnis.</p>
-                <h3>Follow Me</h3>
-                <ul class="icons">
-                    <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-                    <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-                    <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-                </ul>
-            </div>
-
-            <!-- Form -->
-            <div class="column">
-                <h3>Get in Touch</h3>
-                <form action="#" method="post">
-                    <div class="field half first">
-                        <label for="name">Name</label>
-                        <input name="name" id="name" type="text" placeholder="Name">
-                    </div>
-                    <div class="field half">
-                        <label for="email">Email</label>
-                        <input name="email" id="email" type="email" placeholder="Email">
-                    </div>
-                    <div class="field">
-                        <label for="message">Message</label>
-                        <textarea name="message" id="message" rows="6" placeholder="Message"></textarea>
-                    </div>
-                    <ul class="actions">
-                        <li><input value="Send Message" class="button" type="submit"></li>
+        <section id="about">
+            <div class="inner">
+                <!-- Social -->
+                <div class="social column">
+                    <h3>About Me</h3>
+                    <p>第一段.</p>
+                    <p>第二段.</p>
+                    <h3>Follow Me</h3>
+                    <ul class="icons">
+                        <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+                        <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+                        <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
                     </ul>
-                </form>
-            </div>
+                </div>
 
+                <!-- Form -->
+                <div class="column">
+                    <h3>Get in Touch</h3>
+                    <form action="#" method="post">
+                        <div class="field half first">
+                            <label for="name">Name</label>
+                            <input name="name" id="name" type="text" placeholder="Name">
+                        </div>
+                        <div class="field half">
+                            <label for="email">Email</label>
+                            <input name="email" id="email" type="email" placeholder="Email">
+                        </div>
+                        <div class="field">
+                            <label for="message">Message</label>
+                            <textarea name="message" id="message" rows="6" placeholder="Message"></textarea>
+                        </div>
+                        <ul class="actions">
+                            <li><input value="Send Message" class="button" type="submit"></li>
+                        </ul>
+                    </form>
+                </div>
+            </div>
         </section>
 
         <!-- Footer -->
