--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <html>
 <head>
-    <title>久礼斯麦 - Jurnlee's mind</title>
+    <title>久礼斯麦 | Jurnlee's mind</title>
+    <meta name="keyword" content="久礼先生，久礼的博客，久礼斯麦，关注技术，影像，科技，感动，生活" />
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="assets/css/main.css"/>
@@ -39,18 +40,15 @@
         <!-- Banner -->
         <section id="banner">
             <div class="inner">
-                <span class="avatar"><img src="images/avatar-800.jpg" alt="" /></span>
+                <div class="avatar"><img src="images/avatar-800.jpg" alt="" /></div>
                 <h1>久礼先生</h1>
-                <p>jurnlee's mind</p>
+                <p>welcome to Jurnlee's mind</p>
                 <br />
-                <p>只是个在自燃的行者</p>
-                <p>FOCUS AND DEVOTION</p>
-                <!--<h1>Hey, I'm Jurnlee</h1>
-                <h1>A MAN JURNLEE.</h1>
-                <p>FOCUS ON PRESENT AND DEVOTIONAL LIFE</p>
+                <p>影像、科技、感动、生活</p>
+                <!--<p>FOCUS AND DEVOTION</p>-->
                 <ul class="actions">
-                    <li><a href="#galleries" class="button alt scrolly big">Continue</a></li>
-                </ul>-->
+                    <li><a href="#latest" class="button alt scrolly big">Continue</a></li>
+                </ul>
             </div>
         </section>
 
