--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
         <!-- Banner -->
         <section id="banner">
             <div class="inner">
-                <div class="avatar"><img src="images/avatar-800.jpg" alt="" /></div>
-                <h1>久礼先生</h1>
-                <p>welcome to Jurnlee's mind</p>
+                <div class="avatar"><img src="images/j_avatar.jpg" alt="" /></div>
+                <h1>久礼斯麦</h1>
+                <p>Jurnlee's mind</p>
                 <br />
                 <br />
-                <h3>关注技术、分享感动、热爱生活</h3>
-                <p>Focus on the present,lead a devotional life.</p>
+                <h4>关注技术、分享感动、热爱生活</h4>
+                <!--<p>Focus on the present,lead a devotional life.</p>-->
                 <ul class="actions">
                     <!--<li><a href="#latest" class="button alt scrolly big">开始旅程</a></li>-->
                     <li > <i class="icon fa-weixin fa-2x"></i></li>
