--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <br />
                 <br />
                 <h3>关注技术、分享感动、热爱生活</h3>
-                <p>Focus on the present,lead a devotional life.</p>
+                <!--<p>Focus on the present,lead a devotional life.</p>-->
                 <ul class="actions">
                     <!--<li><a href="#latest" class="button alt scrolly big">开始旅程</a></li>-->
                     <li > <i class="icon fa-weixin fa-2x"></i></li>
@@ -58,7 +58,7 @@
         <!-- Gallery -->
         <section id="latest">
             <div class="inner align-center">
-                <h1>专注当下，热爱一切值得被热爱的一切抽象艺术</h1>
+                <h1>专注当下，热爱一切值得被热爱的抽象艺术</h1>
             </div>
         </section>
 
@@ -147,6 +147,6 @@
 <script src="assets/js/skel.min.js"></script>
 <script src="assets/js/util.js"></script>
 <script src="assets/js/main.js"></script>
-
+<script src="https://s19.cnzz.com/z_stat.php?id=1271548041&web_id=1271548041" language="JavaScript"></script>
 </body>
 </html>
