--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>久礼斯麦 | Jurnlee's mind</title>
     <meta name="keyword" content="久礼先生，久礼的博客，久礼斯麦，关注技术，影像，科技，感动，生活" />
+    <meta name="description" content="" />
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="assets/css/main.css"/>
@@ -16,21 +17,24 @@
         <!-- Nav -->
         <nav id="nav">
             <ul>
-                <li><a href="index.html" class="active"><span class="icon fa-home"></span></a></li>
-                <li><a href="tags.html"><span class="icon fa-tags"></span></a></li>  <!--fa-camera-retro -->
-                <li><a href="discovery.html"><span class="icon fa-th-large"></span></a></li>
-                <li><a href="about.html"><span class="icon fa-user"></span></a></li>
+                <li><a href="index.html" class="active" title="首页"><span class="icon fa-home"></span></a></li>
+                <li><a href="tags.html" title="专题"><span class="icon fa-tags"></span></a></li>  <!--fa-camera-retro -->
+                <li><a href="discovery.html" title="发现"><span class="icon fa-th-large"></span></a></li>
+                <li><a href="about.html" title="关于"><span class="icon fa-user"></span></a></li>
             </ul>
         </nav>
-        <div id="nav-narrow" class="fixed">
-            <div class="menu-btn" href="#"><i class="icon fa-bars fa-2x" aria-hidden="true"></i></div>
+        <nav id="nav-narrow" class="fixed">
+            <div class="menu-btn" >
+                <i class="icon fa-bars fa-2x" aria-hidden="true"></i>
+                <!--<span>久礼斯麦</span>-->
+            </div>
             <ul class="menus">
-                <li><a href="index.html" class="active"><span class="icon fa-home"></span>首页</a></li>
-                <li><a href="tags.html"><span class="icon fa-tags"></span></a></li>  <!--fa-camera-retro -->
-                <li><a href="discovery.html"><span class="icon fa-th-large"></span></a></li>
-                <li><a href="about.html"><span class="icon fa-user"></span></a></li>
+                <li><a href="index.html" class="active"><span class="icon fa-home"></span>&nbsp;首页</a></li>
+                <li><a href="tags.html"><span class="icon fa-tags"></span>&nbsp;专题</a></li>  <!--fa-camera-retro -->
+                <li><a href="discovery.html"><span class="icon fa-th-large"></span>&nbsp;发现</a></li>
+                <li><a href="about.html"><span class="icon fa-user"></span>&nbsp;关于</a></li>
             </ul>
-        </div>
+        </nav>
 
     </header>
 
@@ -46,7 +50,7 @@
                 <br />
                 <br />
                 <!--<p>Focus on the present,lead a devotional life.</p>-->
-                <h4>关注技术、分享感动、热爱生活</h4>
+                <h4>技术、感动、生活</h4>
                 <ul class="actions">
                     <!--<li><a href="#latest" class="button alt scrolly big">开始旅程</a></li>-->
                     <li > <i class="icon fa-weixin fa-2x"></i></li>
@@ -64,30 +68,7 @@
 
         <section id="comment">
             <div class="inner">
-                <!-- JiaThis Button BEGIN -->
-                <div class="jiathis_style">
-                    <span class="jiathis_txt">分享到：</span>
-                    <a class="jiathis_button_weixin">微信</a>
-                    <a class="jiathis_button_qzone">QQ空间</a>
-                    <a class="jiathis_button_tsina">新浪微博</a>
-                    <a class="jiathis_button_tqq">腾讯微博</a>
-                    <a href="http://www.jiathis.com/share?uid=2076299" class="jiathis jiathis_txt jiathis_separator jtico jtico_jiathis" target="_blank">更多</a>
-                    <a class="jiathis_counter_style"></a>
-                </div>
-                <script type="text/javascript">
-                    var jiathis_config = {data_track_clickback:'true'};
-                </script>
-                <script type="text/javascript" src="http://v3.jiathis.com/code_mini/jia.js?uid=2076299" charset="utf-8"></script>
-                <!-- JiaThis Button END -->
-                <!-- UJian Button BEGIN -->
-                <div class="ujian-hook"></div>
-                <script type="text/javascript" src="http://v1.ujian.cc/code/ujian.js"></script>
-                <!-- UJian Button END -->
-                <h1>评论区</h1>
-                <!-- UY BEGIN -->
-                <div id="uyan_frame"></div>
-                <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2076299"></script>
-                <!-- UY END -->
+
             </div>
         </section>
         <!-- Contact -->
@@ -135,6 +116,7 @@
             <div class="copyright">
                 &copy; <a href="//jurnlee.cc/">Jurnlee</a>. Images: <a
                     href="https://unsplash.com/">Unsplash,xflye.cc</a>.
+                <script src="https://s19.cnzz.com/z_stat.php?id=1271548041&web_id=1271548041" language="JavaScript"></script>
             </div>
         </footer>
     </section>
@@ -147,6 +129,9 @@
 <script src="assets/js/skel.min.js"></script>
 <script src="assets/js/util.js"></script>
 <script src="assets/js/main.js"></script>
-<script src="https://s19.cnzz.com/z_stat.php?id=1271548041&web_id=1271548041" language="JavaScript"></script>
+<script type="text/javascript" >
+
+</script>
+
 </body>
 </html>
