--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <!-- Nav -->
         <nav id="nav">
             <ul>
-                <li><a href="index.html" class="active" title="首页"><span class="icon fa-home"></span></a></li>
-                <li><a href="tags.html" title="专题"><span class="icon fa-tags"></span></a></li>  <!--fa-camera-retro -->
-                <li><a href="discovery.html" title="发现"><span class="icon fa-th-large"></span></a></li>
-                <li><a href="about.html" title="关于"><span class="icon fa-user"></span></a></li>
+                <li><a href="index.html" class="active" title="首页"><i class="icon fa-home fa-2x"></i></a></li>
+                <li><a href="tags.html" title="专题"><i class="icon fa-tags fa-2x"></i></a></li>  <!--fa-camera-retro -->
+                <li><a href="discovery.html" title="发现"><i class="icon fa-th-large fa-2x"></i></a></li>
+                <li><a href="about.html" title="关于"><i class="icon fa-user fa-2x"></i></a></li>
             </ul>
         </nav>
         <nav id="nav-narrow" class="fixed">
@@ -29,10 +29,10 @@
                 <!--<span>久礼斯麦</span>-->
             </div>
             <ul class="menus">
-                <li><a href="index.html" class="active"><span class="icon fa-home"></span>&nbsp;首页</a></li>
-                <li><a href="tags.html"><span class="icon fa-tags"></span>&nbsp;专题</a></li>  <!--fa-camera-retro -->
-                <li><a href="discovery.html"><span class="icon fa-th-large"></span>&nbsp;发现</a></li>
-                <li><a href="about.html"><span class="icon fa-user"></span>&nbsp;关于</a></li>
+                <li><a href="index.html" class="active"><i class="icon fa-home fa-2x"></i><span>首页</span></a></li>
+                <li><a href="tags.html"><i class="icon fa-tags fa-2x"></i><span>专题</span></a></li>  <!--fa-camera-retro -->
+                <li><a href="discovery.html"><i class="icon fa-th-large fa-2x"></i><span>发现</span></a></li>
+                <li><a href="about.html"><i class="icon fa-user fa-2x"></i><span>关于</span></a></li>
             </ul>
         </nav>
 
@@ -50,7 +50,7 @@
                 <br />
                 <br />
                 <!--<p>Focus on the present,lead a devotional life.</p>-->
-                <h4>技术、感动、生活</h4>
+                <h4><span class="b-title">技术、感动、生活</span><span class="typed-cursor"></span></h4>
                 <ul class="actions">
                     <!--<li><a href="#latest" class="button alt scrolly big">开始旅程</a></li>-->
                     <li > <i class="icon fa-weixin fa-2x"></i></li>
@@ -62,7 +62,7 @@
         <!-- Gallery -->
         <section id="latest">
             <div class="inner align-center">
-                <h1>专注当下，热爱一切值得被热爱的抽象艺术</h1>
+                <h3>专注当下，热爱一切值得被热爱的抽象艺术</h3>
             </div>
         </section>
 
@@ -75,20 +75,20 @@
         <section id="about">
             <div class="inner">
                 <!-- Social -->
-                <div class="social column">
-                    <h3>About Me</h3>
-                    <p>第一段.</p>
-                    <p>第二段.</p>
-                    <h3>Follow Me</h3>
+                <div class="column">
+                    <h3>关于我</h3>
+                    <p>久礼先生，一个在朝着理想的路上慢悠悠走着的IT男</p>
+                    <p>这里是思想的后花园，有空的时候便会来到这里晒晒太阳，栽栽花，种种树，逗逗鸟...</p>
+                    <!--<h3>Follow Me</h3>
                     <ul class="icons">
                         <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
                         <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
                         <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-                    </ul>
+                    </ul>-->
                 </div>
 
                 <!-- Form -->
-                <div class="column">
+                <!--<div class="column">
                     <h3>Get in Touch</h3>
                     <form action="#" method="post">
                         <div class="field half first">
@@ -107,7 +107,7 @@
                             <li><input value="Send Message" class="button" type="submit"></li>
                         </ul>
                     </form>
-                </div>
+                </div>-->
             </div>
         </section>
 
@@ -127,6 +127,7 @@
 <script src="assets/js/jquery.poptrox.min.js"></script>
 <script src="assets/js/jquery.scrolly.min.js"></script>
 <script src="assets/js/skel.min.js"></script>
+<script src="assets/js/typed.min.js"></script>
 <script src="assets/js/util.js"></script>
 <script src="assets/js/main.js"></script>
 <script type="text/javascript" >
