--- a/tags.html
+++ b/tags.html
@@ -29,10 +29,10 @@
                 <!--<span>久礼斯麦</span>-->
             </div>
             <ul class="menus">
-                <li><a href="index.html" class="active"><span class="icon fa-home"></span>&nbsp;首页</a></li>
-                <li><a href="tags.html"><span class="icon fa-tags"></span>&nbsp;专题</a></li>  <!--fa-camera-retro -->
-                <li><a href="discovery.html"><span class="icon fa-th-large"></span>&nbsp;发现</a></li>
-                <li><a href="about.html"><span class="icon fa-user"></span>&nbsp;关于</a></li>
+                <li><a href="index.html" class="active"><i class="icon fa-home fa-2x"></i><span>首页</span></a></li>
+                <li><a href="tags.html"><i class="icon fa-tags fa-2x"></i><span>专题</span></a></li>  <!--fa-camera-retro -->
+                <li><a href="discovery.html"><i class="icon fa-th-large fa-2x"></i><span>发现</span></a></li>
+                <li><a href="about.html"><i class="icon fa-user fa-2x"></i><span>关于</span></a></li>
             </ul>
         </nav>
 
