--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <!-- Nav -->
         <nav id="nav">
             <ul>
-                <li><a href="index.html" class="active" title="首页"><i class="icon fa-home fa-2x"></i></a></li>
-                <li><a href="tags.html" title="专题"><i class="icon fa-tags fa-2x"></i></a></li>  <!--fa-camera-retro -->
-                <li><a href="discovery.html" title="发现"><i class="icon fa-th-large fa-2x"></i></a></li>
-                <li><a href="about.html" title="关于"><i class="icon fa-user fa-2x"></i></a></li>
+                <li><a href="index.html" class="active" title="首页"><i class="icon fa-home"></i></a></li>
+                <li><a href="tags.html" title="专题"><i class="icon fa-tags"></i></a></li>  <!--fa-camera-retro -->
+                <li><a href="discovery.html" title="发现"><i class="icon fa-th-large"></i></a></li>
+                <li><a href="about.html" title="关于"><i class="icon fa-user"></i></a></li>
             </ul>
         </nav>
         <nav id="nav-narrow" class="fixed">
@@ -50,11 +50,11 @@
                 <br />
                 <br />
                 <!--<p>Focus on the present,lead a devotional life.</p>-->
-                <h4><span class="b-title">技术、感动、生活</span><span class="typed-cursor"></span></h4>
+                <h4><span class="b-title"></span><span class="typed-cursor"></span></h4>
                 <ul class="actions">
                     <!--<li><a href="#latest" class="button alt scrolly big">开始旅程</a></li>-->
                     <li > <i class="icon fa-weixin fa-2x"></i></li>
-                    <li > <i class="icon fa-github fa-2x"></i></li>
+                    <li ><a href="https://github.com/jurnlee"><i class="icon fa-github fa-2x"></i></a></li>
                 </ul>
             </div>
         </section>
