--- a/tags.html
+++ b/tags.html
@@ -17,8 +17,8 @@
         <!-- Nav -->
         <nav id="nav">
             <ul>
-                <li><a href="index.html" class="active" title="首页"><span class="icon fa-home"></span></a></li>
-                <li><a href="tags.html" title="专题"><span class="icon fa-tags"></span></a></li>  <!--fa-camera-retro -->
+                <li><a href="index.html" title="首页"><span class="icon fa-home"></span></a></li>
+                <li><a href="tags.html" class="active" title="专题"><span class="icon fa-tags"></span></a></li>  <!--fa-camera-retro -->
                 <li><a href="discovery.html" title="发现"><span class="icon fa-th-large"></span></a></li>
                 <li><a href="about.html" title="关于"><span class="icon fa-user"></span></a></li>
             </ul>
@@ -29,8 +29,8 @@
                 <!--<span>久礼斯麦</span>-->
             </div>
             <ul class="menus">
-                <li><a href="index.html" class="active"><i class="icon fa-home fa-2x"></i><span>首页</span></a></li>
-                <li><a href="tags.html"><i class="icon fa-tags fa-2x"></i><span>专题</span></a></li>  <!--fa-camera-retro -->
+                <li><a href="index.html" ><i class="icon fa-home fa-2x"></i><span>首页</span></a></li>
+                <li><a href="tags.html" class="active"><i class="icon fa-tags fa-2x"></i><span>专题</span></a></li>  <!--fa-camera-retro -->
                 <li><a href="discovery.html"><i class="icon fa-th-large fa-2x"></i><span>发现</span></a></li>
                 <li><a href="about.html"><i class="icon fa-user fa-2x"></i><span>关于</span></a></li>
             </ul>
@@ -50,11 +50,11 @@
                 <br />
                 <br />
                 <!--<p>Focus on the present,lead a devotional life.</p>-->
-                <h4>技术、感动、生活</h4>
+                <h4> <span class="b-title"></span><span class="typed-cursor"></span> </h4>
                 <ul class="actions">
                     <!--<li><a href="#latest" class="button alt scrolly big">开始旅程</a></li>-->
                     <li > <i class="icon fa-weixin fa-2x"></i></li>
-                    <li > <i class="icon fa-github fa-2x"></i></li>
+                    <li > <a href="https://github.com/jurnlee"><i class="icon fa-github fa-2x"></i></a> </li>
                 </ul>
             </div>
         </section>
