--- a/index.html
+++ b/index.html
@@ -59,10 +59,13 @@
             </div>
         </section>
 
-        <!-- Gallery -->
-        <section id="latest">
-            <div class="inner align-center">
-                <h3>专注当下，热爱一切值得被热爱的抽象艺术</h3>
+        <section id="guide-view">
+            <div class="inner align-center view-content">
+                <div >
+                    <p>大道至简，凡事道相通，术不同</p>
+                    <p>分，是起源，是过程，是结果，分合是艺术</p>
+                    <p>学以致用，专注当下，热爱一切值得被热爱的抽象艺术</p>
+                </div>
             </div>
         </section>
 
