--- a/tags.html
+++ b/tags.html
@@ -71,6 +71,7 @@
 </div>
 
 <!-- Scripts -->
+<script src="assets/js/typed.min.js"></script>
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/jquery.poptrox.min.js"></script>
 <script src="assets/js/jquery.scrolly.min.js"></script>
