--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <br />
                 <br />
                 <!--<p>Focus on the present,lead a devotional life.</p>-->
-                <h4><span class="b-title"></span><span class="typed-cursor"></span></h4>
+                <div class="b-text-box"><span class="b-title"></span><span class="typed-cursor"></span></div>
                 <ul class="actions">
                     <!--<li><a href="#latest" class="button alt scrolly big">开始旅程</a></li>-->
                     <li > <i class="icon fa-weixin fa-2x"></i></li>
